--- a/config.toml
+++ b/config.toml
@@ -3,6 +3,7 @@ languageCode = "en-us"
 title = "Ang Mo Finance"
 theme = "kiss"
 
+googleAnalytics = "G-TEEQWRLQH7"
 enableRobotsTXT = true
 paginate = 5
 
