--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://angmo-finance.github.io/"
+baseURL = "https://angmo-finance.github.io"
 languageCode = "en-us"
 title = "Ang Mo Finance"
 theme = "kiss"
